Fix toast z-index so it appears above the share menu.

--- a/extensions/amp-story/1.0/amp-story.css
+++ b/extensions/amp-story/1.0/amp-story.css
@@ -532,7 +532,7 @@ amp-story[standalone] .i-amphtml-story-developer-log {
   font-weight: 400 !important;
   font-size: 12px !important;
   max-width: 640px !important;
-  z-index: 100002 !important; /** Bookend + 1 */
+  z-index: 100004 !important; /** share menu + 1 */
 }
 
 @media (min-width: 640px) {
